nodes/kenaz.k8s/open-webui/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
spec:
  selector:
    app: open-webui
  ports:
    - name: http
      port: 80
      targetPort: http
